--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
                     python -m pip install --upgrade setuptools wheel
                     pip install flake8
                     if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+                    pip install -r https://raw.githubusercontent.com/SamuelMarks/ml-params/master/requirements.txt
+                    pip install -r https://raw.githubusercontent.com/SamuelMarks/ml-prepare/master/requirements.txt
             -   name: Lint with flake8
                 run: |
                     # stop the build if there are Python syntax errors or undefined names
