--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: Linting & testing
 
 on: [push]
 
@@ -20,7 +20,7 @@ jobs:
                     python -m pip install --upgrade pip
                     python -m pip install --upgrade setuptools wheel
                     pip install flake8
-                    if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+                    pip install -r requirements.txt
                     pip install -r https://raw.githubusercontent.com/SamuelMarks/ml-params/master/requirements.txt
                     pip install -r https://raw.githubusercontent.com/SamuelMarks/ml-prepare/master/requirements.txt
             -   name: Lint with flake8
